[package]
name = "OverEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
specs = "0.20.0"
specs-derive = "0.4.1"
rhai = { version = "1.16.3", features = [ "only_i32" ] }

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
