[package]
name = "OverEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = "0.4.1"
rmp-serde = "1.1.2"
nalgebra = "0.32.3"
rhai = { version = "1.16.3", features = [ "only_i32" ] }
serde =  { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
ron = "0.8.1"



[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
